Discover packages posted to Reddit

--- a/FreePackages/Localization/Strings.resx
+++ b/FreePackages/Localization/Strings.resx
@@ -241,4 +241,8 @@
     <value>Free Packages plugin not enabled</value>
     <comment/>
   </data>
+  <data name="ASFInfoParseFailed" xml:space="preserve">
+    <value>Failed to parse data from ASFInfo</value>
+    <comment/>
+  </data>
 </root>
