--- a/FreePackages/Localization/Strings.resx
+++ b/FreePackages/Localization/Strings.resx
@@ -190,7 +190,7 @@
     <comment/>
   </data>
   <data name="QueueStatus" xml:space="preserve">
-    <value>{0} free packages queued. {1}/{2} hourly activations used.</value>
+    <value>{0} free packages queued. {1}/{2} activations used.</value>
     <comment>{0} will be replaced by a number, {1} will be replaced by a number, {2} will be replaced by a number</comment>
   </data>
   <data name="QueuePausedWhileIngame" xml:space="preserve">
